--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,7 @@
   <div id="root"></div>
 </body>
 <style>
-  @import url('https://fonts.googleapis.com/css?family=Roboto');
-  @import url('https://fonts.googleapis.com/css?family=Roboto+Regular');
-  @import url('https://fonts.googleapis.com/css?family=Roboto+Medium');
-  @import url('https://fonts.googleapis.com/css?family=Roboto+Bold');
-  @import url('https://fonts.googleapis.com/css?family=Roboto+Light');
+  @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext');
 </style>
 
 </html>
