Частичное подключение языков

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxjEYepkLXhQuXcf_1sUakshHN5Jrozc8&libraries=places&callback=initialize&language=en" id="langScript">
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxjEYepkLXhQuXcf_1sUakshHN5Jrozc8&libraries=places&callback=initialize"></script>
-
+    </script>
+    
     <link rel="stylesheet" href="node_modules/react-star-rating/dist/css/react-star-rating.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -24,5 +26,5 @@
     @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext');
 </style>
 <link rel="stylesheet" src='../src/index.css'>
-
 </html>
+
