--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8" />
@@ -12,7 +12,8 @@
     <link rel="icon" sizes="any" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-
+    <meta property="og:image" content="https://tripfer.com/uploads/email/logo_tripfer_blue.svg" />
+		
 
 </head>
 
