--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TK6XQHZ');</script>
+        <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEs5_ZKOKPM_sm6kKsQ_pXyRFUwWrLSNQ&libraries=places&callback=initialize&language=en" id="langScript">
@@ -18,6 +25,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TK6XQHZ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
 </body>
 <style>
